--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 click==8.0.1
+decorator==5.1.1
+dnspython==1.16.0
 Flask==2.0.1
 Flask-PyMongo==2.3.0
 itsdangerous==2.0.1
@@ -7,4 +9,5 @@ MarkupSafe==2.0.1
 PyJWT==2.1.0
 pymongo==3.12.0
 python-dotenv==0.19.2
+validators==0.20.0
 Werkzeug==2.0.1
