--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ decorator==5.1.1
 dnspython==1.16.0
 Flask==2.0.1
 Flask-PyMongo==2.3.0
+gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
